# fabric-store

./: .dockerignore  .env.example  .gitignore  ADMIN_DASHBOARD_README.md  AGENT_FRAMEWORK_INTEGRATION.md  AGENT_SYSTEM_BLUEPRINT.md  AGENT_SYSTEM_FILES.txt  AL_IMRAN_FABRICS_BLUEPRINT.md  AL_IMRAN_MULTI_BRAND_SPECIFICATION.md  AL_IMRAN_TECHNICAL_SPECIFICATION_PART3_6.md  AL_IMRAN_WIREFRAMES_PART1_HOMEPAGE.md  AL_IMRAN_WIREFRAMES_PART2_PRODUCT_PAGES.md  AL_IMRAN_WIREFRAMES_PART3_5_COMPLETE.md  CATEGORY_CIRCLES_UPDATE.md  DEPLOYMENT_GUIDE.md  Dockerfile  ECOMMERCE_SPECIFICATION.md  FEATURES.md  ORCHESTRATOR_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_AGENT_SYSTEM.md  SETUP.md  ZELLBURY_SETUP.txt  agent-system-config.json  complete-agent-system.json  docker-compose.yml  orchestrator-config.json  pyproject.toml  seed.py
alembic/: env.py
app/: main.py
app/api/: deps.py
app/core/: config.py  security.py
backend/: .env.example  .railwayignore  Dockerfile  add_men_products.py  add_products.py  pyproject.toml  requirements.txt  seed_data.py  seed_zellbury_embroidery.py  update_product_images.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  brand.py  category.py  order.py  product.py  user.py
backend/app/routers/: admin.py  auth.py  orders.py  products.py
backend/app/schemas/: __init__.py  order.py  product.py  user.py
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+77 files in other folders)
